--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ numpy==1.19.2
 requests==2.24.0
 scikit-learn==0.23.2
 python-dotenv==0.14.0
+matplotlib==3.3.2
+umap-learn==0.4.6
 
 pylint==2.6.0
 mypy==0.782
