--- a/mypy.ini
+++ b/mypy.ini
@@ -2,3 +2,9 @@
 
 [mypy-pandas.*]
 ignore_missing_imports = True
+
+[mypy-sklearn.*]
+ignore_missing_imports = True
+
+[mypy-umap.*]
+ignore_missing_imports = True
